--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.3.2",
+    "chartjs-react": "^3.3.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-chartjs-2": "^3.0.3",
+    "react-countup": "^4.3.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
